# onlineChatProject

./: 传输协议.md  客户端gui逻辑参考.txt
Client/: AddFriendDialog.cpp  AddFriendDialog.h  AddFriendDialog.ui  Client.pro  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  NetworkManager.cpp  NetworkManager.h  main.cpp  widget.cpp  widget.h  widget.ui
Server/: CMakeLists.txt  server.cpp
chatroom/: CMakeLists.txt  chatMsg.hpp  client.cpp
qt_chat_client/: AI回答.txt
聊天室/: server.cpp
